# loom

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  luac.out  syntax.txt  test.lum  test.lv  test.txt  test2.txt  todo.db  vars.lum
.github/workflows/: rust.yml
apps/lsp_server/: Cargo.toml  mod2.rs  server.rs
bins/cli/: Cargo.toml
bins/cli/src/: main.rs
bins/lsp/: Cargo.toml
bins/lsp/src/: main.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: code.rs  lib.rs  simple.as  vm.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: builtins.rs  context.rs  globals.rs  lib.rs  vtype.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: errors.rs  id.rs  iter.rs  lib.rs  loc.rs  string.rs  token.rs  tokenizer.rs
crates/lexer/tests/: tokens_test.rs
crates/parser/: Cargo.toml
crates/parser/src/: args.rs  ast.rs  ast_node.rs  block.rs  branch.rs  call.rs  define.rs  expr.rs  func.rs  lib.rs  loop.rs  node.rs  params.rs  value.rs
crates/parser/src/detail/: helpers.rs  mod.rs  node.rs  value.rs
crates/vm/: Cargo.toml
crates/vm/src/: instr.rs  lib.rs  op_code.rs  vm.rs
examples/: shor.lum  sieve_of_eratosthenes.lum
src/: errors.rs  iter.rs  loc.rs  main.rs  token.rs
src/interpreter/: mod.rs
src/lexer/: id.rs  mod.rs  number.rs  string.rs  tokenizer.rs
src/lsp_server/: mod.rs  server.rs
src/parser/: ast.rs  ast_node.rs  block.rs  branch.rs  expr.rs  mod.rs  value.rs
src/tokenizer/: id.rs  mod.rs  tokenizer.rs
tests/: compute_compiled_test.rs  compute_test.rs  parsing_test.rs
tree-sitter-langvm/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
tree-sitter-langvm/bindings/node/: binding.cc  index.js
tree-sitter-langvm/bindings/rust/: lib.rs
tree-sitter-langvm/queries/: highlights.scm
tree-sitter-langvm/src/: grammar.json  node-types.json  parser.c
tree-sitter-langvm/test/corpus/: expression.txt
tree-sitter-loom/: Cargo.toml  binding.gyp  grammar.js  package.json
tree-sitter-loom/bindings/node/: binding.cc  index.js
tree-sitter-loom/bindings/rust/: lib.rs
tree-sitter-loom/queries/: highlights.scm
tree-sitter-loom/src/: grammar.json  node-types.json  parser.c
tree-sitter-loom/test/corpus/: expression.txt
