[package]
name = "loom"
version = "0.1.0"
edition = "2021"


[workspace]
members = [
  "crates/lexer",
  "crates/parser",
  "crates/interpreter",
  "crates/compiler",
  "bins/lsp",
  "bins/cli",
  "tree-sitter-loom",
]


[dependencies]
lexer = { path = "./crates/lexer" }
parser = { path = "./crates/parser" }
interpreter = { path = "./crates/interpreter" }
compiler = { path = "./crates/compiler" }
vm = { path = "./crates/vm" }
cli = { path = "./bins/cli" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

