[package]
name = "lang_vm_lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lsp"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower-lsp = "0.20.0"
