[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[lib]
tests = true
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-display = "0.1.3"
lexer = { path =  "../lexer" }
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
parser = { path = "../parser" }
